2023-03-27 [1.42 Bld 240]

- Addition    : add Konami 052001 as target

2023-03-08 [1.42 Bld 239]

- Addition    : allow to set BIGENDIAN flag's default value by
                command line
- Addition    : allow to set PACKING flag's default value by
                command line
- Bugfix      : Allow 8 bit AND/OR on H8/300(L)
- Addition    : German documentation may optionally be built
                with Babel-based German style

2023-02-19 [1.42 Bld 238]

- Bugfix      : Extend and correct Code page 037 definition
- Addition    : Support ORB as alias for OR on PALM
- Addition    : Add definition of IBM 5110's variant of EBCDIC
- Addition    : Add character set definition for IBM 5100
- Addition    : JMP on PALM encodes as BRA if possible
- Addition    : CHARSET allows characters to be defined
                'non-existant' on the target system
- Addition    : Allow alternative conditions P/N/Z on 2650,
                plus numeric conditions
- Addition    : Add ACON and RES instructions on 2650
- Addition    : Optionally allow A'...' syntax for multi
                character constants.
- Addition    : Support BIGENDIAN on 2650 to control
                behaviour of DW, DD, DQ...
- Bugfix      : JMP on PALM now also supports auto-increment
                and -decrement

2023-02-05 [1.42 Bld 237]

- Addition    : Add National Semiconductor IMP-16 and PACE targets

2023-01-18 [1.42 Bld 236]

- Addition    : Add Rockwell PPS-4 target
- Addition    : Add DCM statement to 6502 to dispose
                floating point constants in Apple format

2022-12-31 [1.42 Bld 235]

- Addition    : Add AEG/Olympia CP-3F target
- Change      : Reworked symbol table handling to make it
                slightly faster

2022-12-21 [1.42 Bld 234]

- Addition    : Allow DB as alias for BYT on 65xx
- Addition    : Allow DW as alias for ADR on 65xx
- Addition    : Allow DS as alias for RMB on 65xx
- Addition    : Add DDB for 65xx and MELPS-7700

2022-12-05 [1.42 Bld 233]
