@@ -11,8 +11,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-const char *Version = "1.42 Beta [Bld 240]";
-const char *DebVersion = "1.42bld240-1";
+const char *Version = "1.42 Beta [Bld 241]";
+const char *DebVersion = "1.42bld241-1";
 LongInt VerNo = 0x142f;
 
 const char *InfoMessCopyright = "(C) 1992,2023 Alfred Arnold";
